Added a footer and link to github page

--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
     <br />
     <a
       href="https://en.wikipedia.org/wiki/Spice"
-      target="_blank"
+      target="_blank" class="wiki-link"
       >Read More on Wikipedia</a
     >
     <br />
     <button>Buy Spices Today</button>
+
+    <footer>
+      This project was coded by Nnene Akinremi and is <a href="https://github.com/NneneA/Website-building/tree/gh-pages" class="gh-link">open sourced on Github</a>.
+    </footer>
 
     <script src="script.js"></script>
   </body>
